--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
 
   amplify_flutter: ^0.6.0
   amplify_datastore: ^0.6.0
+  amplify_api: ^0.6.0
+  amplify_auth_cognito: ^0.6.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
