--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -21,5 +21,14 @@
         }
       }
     }
+  },
+  "auth": {
+    "ilabsmovee": {
+      "service": "Cognito",
+      "serviceType": "imported",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [],
+      "customAuth": false
+    }
   }
 }
